# RepList

./: .gitignore  README.md  buildServer.json  db_dump.sql  justfile  server-steps.md  vm-setup.sh
Api/: Package.swift  README.md
Api/Sources/App/: Application+build.swift
IOSApp/IOSApp/: ContentView.swift  IOSAppApp.swift
IOSApp/IOSApp.xcodeproj/: project.pbxproj
IOSApp/IOSApp/Components/: BigButton.swift  InputField.swift  PieceView.swift  PiecesListSection.swift
IOSApp/IOSApp/Design/: Colors.swift
IOSApp/IOSApp/Features/: AddPiece.swift  App.swift  LoginFeature.swift  PieceDetail.swift  (+4 more)
IOSApp/IOSAppTests/: IOSAppTests.swift  LoginFeatureTests.swift  LoginTests.swift  RepertoireListTests.swift  SignupFeatureTests.swift  SignupTests.swift
IOSApp/IOSAppUITests/: IOSAppUITests.swift  IOSAppUITestsLaunchTests.swift
Models/: Package.swift
api/: .env  Cargo.toml
api/migrations/00_init/: down.sql  up.sql
api/src/: db.rs  init.rs  logger.rs  main.rs  types.rs
api/src/db/: mod.rs  tables.rs
api/src/handlers/: confirm_waitlist_email.rs  get_all_repertoire.rs  get_repertoire.rs  get_user_repertoire.rs  join_waitlist.rs  login.rs  mod.rs  signup.rs
api/src/libs/: db.rs  email.rs
api/src/types/: get_all_repertoire.rs  get_repertoire.rs  get_user_repertoire.rs  login.rs  mod.rs  signup.rs
fen/: GetAllRepertoire.fen  GetRepertoire.fen  GetUserRepertoire.fen  Login.fen  Signup.fen  config.toml
marsh/: types.marsh
website/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
website/src/: index.css  index.tsx  routeTree.gen.ts
(+52 files in other folders)
