[package]
name = "api"
version = "0.1.0"
description = "An Axum api for RepList"
edition = "2021"
repository = "https://github.com/kiahjh/RepList"
categories = ["web-programming", "web-programming::http-server"]
keywords = ["RepList", "API", "Axum"]
license = "MIT"
readme = "README.md"

[dependencies]
axum = {version = "0.7.9", features = ["macros"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
serde_json = "1.0.133"
serde = "1.0.216"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
bcrypt = "0.16.0"
colored = "3.0.0"
dotenvy_macro = "0.15.7"
resend-rs = "0.12.0"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
perf = "warn"
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
# cargo = "warn"
